Fri Sep 10 08:25:43 UTC 2010  Marcel Smit  <msmit@remedy.nl>

        * tests/CIF/Navigation/client.cpp:
        * tests/CIF/Receptacle/client.cpp:
        * tests/CIF/descriptors/run_test.pl:
          Extended tests. Improved logging. Added TODO list te keep track of
          which tests fail.

Thu Sep  9 02:47:19 UTC 2010  William R. Otte  <wotte@dre.vanderbilt.edu>

        * CIAO_DAnCE.mwc:
        * CIAO_TAO_DAnCE.mwc:

          Remove tools/XML.

Wed Sep  8 15:30:34 UTC 2010  William R. Otte  <wotte@dre.vanderbilt.edu>

        * bin/ciao_tests.lst:
        * tests/DAnCE:

          Moved CIAO specific tests from DAnCE.

Wed Sep  8 15:11:44 UTC 2010  William R. Otte  <wotte@dre.vanderbilt.edu>

        * examples/Hello/descriptors/shs.ciao.localityconfig:

          Add a locality config apparently missing from a previous commit.

Wed Sep  8 15:11:01 UTC 2010  William R. Otte  <wotte@dre.vanderbilt.edu>

        * NEWS:

          Updated to reflect planned DAnCE move.

Wed Sep  8 15:10:24 UTC 2010  William R. Otte  <wotte@dre.vanderbilt.edu>

        * MPC/config/ciao_xml_utils.mpb:
        * tools/XML:
        * tools/XML/CIAO_XML_Utils_Export.h:
        * tools/XML/XML.mpc:
        * tools/XML/XML_Error_Handler.h:
        * tools/XML/XML_Error_Handler.cpp:
        * tools/XML/XML_Helper.h:
        * tools/XML/XML_Helper.tpp:
        * tools/XML/XML_Schema_Resolver.h:
        * tools/XML/XML_Schema_Resolver.tpp:
        * tools/XML/XML_Schema_Resolver.cpp:
        * tools/XML/XercesString.h:
        * tools/XML/XercesString.cpp:

          Moved XML utils to DAnCE.

Wed Sep  8 15:09:06 UTC 2010  William R. Otte  <wotte@dre.vanderbilt.edu>

        * bin/ciao_tests.lst:
        * tests/IDL3_to_XMI:
        * tests/IDL3_to_XMI/Bug_3607_Regression:
        * tests/IDL3_to_XMI/Bug_3607_Regression/run_test.pl:
        * tests/IDL3_to_XMI/Bug_3607_Regression/test.idl:
        * tests/IDL3_to_XMI/IDL2XMI_Test: