@@ -3,9 +3,11 @@
 project (CIF_Common) : ccm_configvalue, ciao_logger, naming {
   dynamicflags += CIF_COMMON_BUILD_DLL
   sharedname = CIF_Common
-  after += CIF_Component_lem_stub
   includes += ..
+  after += CIF_Component_stub
+  libs += CIF_Component_stub
   libout = ../lib
+  libpaths += ../lib
 
   IDL_Files {
   }
