@@ -1,3 +1,11 @@
+Fri Sep 10 10:54:09 UTC 2010  Marcel Smit  <msmit@remedy.nl>
+
+        * tests/CIF/Common/CIF_Common.mpc:
+          Resolved linker issues on Windows.
+
+        * tests/CIF/Navigation/client.cpp:
+          Implemented the correct names in get_named_facets.
+
 Fri Sep 10 08:25:43 UTC 2010  Marcel Smit  <msmit@remedy.nl>
 
         * tests/CIF/Navigation/client.cpp:
